--- a/index.html
+++ b/index.html
@@ -163,6 +163,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="mb-3">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <label class="form-label mb-0">Potkupelti</label>
+                            <div class="form-check form-switch">
+                                <input class="form-check-input" type="checkbox" id="kickPlateToggle" checked onchange="applySettings()">
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Sulje</button>
