--- a/index.html
+++ b/index.html
@@ -61,12 +61,18 @@
                         <button class="btn btn-outline-primary" onclick="selectCalculator('janisol-kayntiovi')" id="btn-janisol-kayntiovi">
                             Janisol Käyntiovi
                         </button>
+                        <button class="btn btn-outline-primary" onclick="selectCalculator('janisol-ikkuna')" id="btn-janisol-ikkuna">
+                            Janisol Ikkuna
+                        </button>
                         <button class="btn btn-outline-primary" onclick="selectCalculator('economy-pariovi')" id="btn-economy-pariovi">
                             Economy Pariovi
         </button>
                         <button class="btn btn-outline-primary" onclick="selectCalculator('economy-kayntiovi')" id="btn-economy-kayntiovi">
                             Economy Käyntiovi
         </button>
+                        <button class="btn btn-outline-primary" onclick="selectCalculator('economy-ikkuna')" id="btn-economy-ikkuna">
+                            Economy Ikkuna
+                        </button>
                     </div>
                     <button class="btn btn-info" onclick="openSettings()">⚙️ Asetukset</button>
                 </div>
@@ -78,9 +84,9 @@
             <div class="card-body p-4">
                 <h4 class="mb-4">Syötteet</h4>
                 <div class="row">
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6 col-lg-3" id="mainDoorWidthContainer">
             <div class="mb-3">
-                            <label for="mainDoorWidth" class="form-label">Käyntioven leveys (mm)</label>
+                            <label for="mainDoorWidth" class="form-label" id="mainDoorWidthLabel">Käyntioven leveys (mm)</label>
                             <input type="number" class="form-control" id="mainDoorWidth" min="500" value="795" oninput="calculate()">
                 </div>
             </div>
@@ -90,7 +96,7 @@
                             <input type="number" class="form-control" id="sideDoorWidth" min="500" value="625" oninput="calculate()">
                 </div>
             </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6 col-lg-3" id="kickPlateHeightContainer">
             <div class="mb-3">
                             <label for="kickPlateHeight" class="form-label">Potkupellin oletuskorkeus (mm)</label>
                             <input type="number" class="form-control" id="kickPlateHeight" min="100" value="300" oninput="calculate()">
