LisÃ¤tty ikkunalaskureihin asetukset ja useamman ruudun tuki (leveys + korkeus per ruutu)

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="mb-3">
+                    <div class="mb-3" id="gapOptionSetting">
                         <label for="gapOption" class="form-label">Rako</label>
                         <select class="form-select" id="gapOption" onchange="applySettings()">
                             <option value="8">8 mm rako</option>
@@ -169,7 +169,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-3" id="kickPlateSetting">
                         <div class="d-flex justify-content-between align-items-center">
                             <label class="form-label mb-0">Potkupelti</label>
                             <div class="form-check form-switch">
