--- a/index.html
+++ b/index.html
@@ -109,9 +109,15 @@
                     </div>
                 </div>
             </div>
-                <div class="mt-3">
-                    <button class="btn btn-success me-2" onclick="savePreset()">💾 Tallenna</button>
-                    <button class="btn btn-warning" onclick="loadPresetDialog()">📂 Valmiit Mitat</button>
+                <div class="mt-3 d-flex justify-content-between align-items-end">
+                    <div>
+                        <button class="btn btn-success me-2" onclick="savePreset()">💾 Tallenna</button>
+                        <button class="btn btn-warning" onclick="loadPresetDialog()">📂 Valmiit Mitat</button>
+                    </div>
+                    <div id="currentSettingsInfo" class="text-end" style="font-size: 0.75rem; color: var(--text-secondary); line-height: 1.3;">
+                        <div>Rako: <span id="currentGapSetting">8 mm rako</span></div>
+                        <div>Kaavat: <span id="currentFormulaSet">Default Kaavat</span></div>
+                    </div>
             </div>
         </div>
         </div>
