--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harrin Teräsovi Mittalaskuri</title>
+    <title>Teräsovi Mittaohjelmisto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css?v=20260129212100">
+    <link rel="stylesheet" href="styles.css?v=20260204000000">
 </head>
 <body>
     <!-- Login Screen -->
@@ -14,11 +14,11 @@
             <div class="col-md-6 col-lg-4">
                     <div class="card shadow-lg">
                         <div class="card-body p-5">
-                            <h2 class="text-center mb-4">Harrin Teräsovi Mittalaskuri</h2>
+                            <h2 class="text-center mb-4">Teräsovi Mittaohjelmisto</h2>
                             <form id="loginForm">
                                 <div class="mb-3">
                                     <label for="email" class="form-label">Sähköposti</label>
-                                    <input type="email" class="form-control" id="email" placeholder="esim. nimi@terasovi.local" required>
+                                    <input type="email" class="form-control" id="email" placeholder="esim. nimi@teras.local" required>
                                 </div>
                                 <div class="mb-3">
                                     <label for="password" class="form-label">Salasana</label>
@@ -40,7 +40,7 @@
             <div class="card-body p-3">
                 <div class="d-flex justify-content-between align-items-center flex-wrap gap-2">
                     <div>
-                        <h4 class="mb-0">Harrin Teräsovi Mittalaskuri</h4>
+                        <h4 class="mb-0">Teräsovi Mittaohjelmisto</h4>
                         <p class="text-muted mb-0 mt-1" style="font-size: 13px;">Ammattimainen mittatyökalu</p>
                     </div>
                     <div class="d-flex gap-2 align-items-center">
@@ -129,7 +129,7 @@
                     <h4 class="mb-0">Tulokset</h4>
                     <div>
                         <button class="btn btn-primary me-2" onclick="copyResults(event)">📋 Kopioi</button>
-                        <button class="btn btn-danger" onclick="exportToPDF()">📄 Vie PDF:ksi</button>
+                        <button class="btn btn-danger" onclick="exportToPDF()">📄 PDF</button>
                     </div>
                 </div>
                 <div id="results" class="results-container">
