LisÃ¤tty ikkunalaskureihin tÃ¤ytÃ¤-alaspÃ¤in toiminto ja laajennettu ruutujen mÃ¤Ã¤rÃ¤ 12:een
- Muutettu ikkunalaskurien syÃ¶ttÃ¶kenttien jÃ¤rjestys: jokaisen ruudun leveys ja korkeus nyt vierekkÃ¤in
- LisÃ¤tty nuolinappula syÃ¶ttÃ¶kenttiin, joka tÃ¤yttÃ¤Ã¤ kaikki alla olevat kentÃ¤t samalla arvolla
- Laajennettu ruutuvalinnat 5:stÃ¤ 12:een ruutuun
- LisÃ¤tty CSS-tyylit nuolinappulalle

--- a/index.html
+++ b/index.html
@@ -165,6 +165,13 @@
                             <option value="3">3 ruutua</option>
                             <option value="4">4 ruutua</option>
                             <option value="5">5 ruutua</option>
+                            <option value="6">6 ruutua</option>
+                            <option value="7">7 ruutua</option>
+                            <option value="8">8 ruutua</option>
+                            <option value="9">9 ruutua</option>
+                            <option value="10">10 ruutua</option>
+                            <option value="11">11 ruutua</option>
+                            <option value="12">12 ruutua</option>
                         </select>
                     </div>
                     <div class="mb-3">
@@ -978,6 +985,6 @@
       window.dispatchEvent(new Event('firebaseReady'));
     </script>
 
-    <script src="app.js?v=20260129212013"></script>
+    <script src="app.js?v=20260207003"></script>
 </body>
 </html>
